reports/Cooper.log
Traceback (most recent call last):
  File "/Users/rsultana/conda-intel/envs/sklearn/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/rsultana/conda-intel/envs/sklearn/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/rsultana/conda-intel/envs/sklearn/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/rsultana/conda-intel/envs/sklearn/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/rsultana/conda-intel/envs/sklearn/lib/python3.10/asyncio/base_events.py", line 646, in run_until_complete
    return future.result()
  File "/Users/rsultana/conda-intel/envs/sklearn/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/rsultana/conda-intel/envs/sklearn/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/rsultana/conda-intel/envs/sklearn/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
table1 = table[table.inv_genotype=="NI")]
X = table1[table1.columns[5:]]
Y = table1['phenotype']
lr = LogisticRegression(random_state=42, solver='saga', n_jobs=-1, penalty='elasticnet')
table1.groupby('phenotype')['participant_id'].nunique()
------------------

[0;36m  Cell [0;32mIn [27], line 1[0;36m[0m
[0;31m    table1 = table[table.inv_genotype=="NI")][0m
[0m                                           ^[0m
[0;31mSyntaxError[0m[0;31m:[0m closing parenthesis ')' does not match opening parenthesis '['

SyntaxError: closing parenthesis ')' does not match opening parenthesis '[' (3030410016.py, line 1)

